# CQ_Alpha

./: Flask.py  README.md  app.py  app_events.py  chapter_extractor.py  config_manager.py  handlers.py  image_processor.py  ocr_processor.py  pdf_loader.py  pdf_processor.py  pyproject.toml  replit.nix  replit.txt  requirements.txt  test.py  test_flask.py  widgets_t1.py  widgets_t2.py  widgets_t3.py
